# windows-notify

./: Cargo.toml  README.md
src/: main.rs  toast.rs
