[package]
name = "wnotify"
version = "0.1.0"
edition = "2021"
description = "Windows CLI tool for easy, customizable toast notifications."

[dependencies]
seahorse = "2.2"

[dependencies.windows]
version = "0.52.0"
features = ["Win32_UI_Shell", "Data_Xml_Dom", "UI_Notifications"]

[profile.release]
strip = true
opt-level = "z"
lto = true
